admin home.html now works - plus changes in Urge.php making the interface with urge.php class more simplistic by removing some redundant functionality.

--- a/twig/home.html
+++ b/twig/home.html
@@ -23,12 +23,12 @@
                 <div class="row col-md-6">
                     <div class="col-1">
                         <form action="/php/wannabe.php" method="post" class="form-group">
-                            <button type="submit" name="yes" value="{{ _user['id'] }}" class="btn btn-success btn-sm">Yai!</button>
+                            <button type="submit" name="teacher" value="{{ _user['id'] }}" class="btn btn-success btn-sm">Yai!</button>
                         </form>
                     </div>
                     <div class="col-1">
                         <form action="/php/wannabe.php" method="post" class="form-group">
-                            <button type="submit" name="no" value="{{ _user['id'] }}" class="btn btn-danger btn-sm">Nej!</button>
+                            <button type="submit" name="student" value="{{ _user['id'] }}" class="btn btn-danger btn-sm">Nej!</button>
                         </form>
                     </div>
                     <!-- Empty div for spacing -->
