namechanges pointing to new php actions

--- a/twig/upload.html
+++ b/twig/upload.html
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <div class="container">
-        <form action="/php/upload.php" method="post" enctype="multipart/form-data">
+        <form action="/php/videoUpload.php" method="post" enctype="multipart/form-data">
             <div class="row col-md-12">
                 <div class="col-md-4">
                    <label for="fileuploader"><h4 class="other-title">Upload <span class="text-success">Video</span></h4></label>
