--- a/twig/video.html
+++ b/twig/video.html
@@ -28,15 +28,12 @@
                 </div>
                 <div class="col-1"></div>
                 <div>
-                    {% if hasLiked==true %}
-                    <form action="/video?id={{ videoData['id'] }}" method="post">
+                    {% if hasLiked %}
                         <button type="submit" name="nothing" value="nothing" class="btn btn-success btn-sm">
                             <img src="/icon/arrow-up.png" aria-hidden="true">
                         </button>
-                    </form>
-                    {% else %}
-                    <form action="/video?id={{ videoData['id'] }}" method="POST">
-
+                    {% else %} 
+                    <form action="/php/videoVote.php?videoid={{ videoData['id'] }}" method="POST">
                         <button type="submit" name="upvote" value="upvote" class="btn btn-success btn-sm">
                             <img src="/icon/arrow-up.png" aria-hidden="true">
                         </button>
@@ -46,13 +43,11 @@
 
                 <div>
                     {% if hasLiked==true %}
-                    <form action="/video?id={{ videoData['id'] }}" method="POST">
                         <button type="submit" name="nothing" value="nothing" class="button btn btn-danger btn-sm">
                             <img src="/icon/arrow-down.png" aria-hidden="true">
                         </button>
-                    </form>
                     {% else %}
-                    <form action="/video?id={{ videoData['id'] }}" method="POST">
+                    <form action="/php/videoVote.php?videoid={{ videoData['id'] }}" method="POST">
                         <button type="submit" name="downvote" value="downvote" class="button btn btn-danger btn-sm">
                             <img src="/icon/arrow-down.png" aria-hidden="true">
                         </button>
@@ -82,7 +77,7 @@
                 <h1 class="display-4">Comments</h1>
             </div>
             {% if loggedin=='yes' %}
-            <form class="comment-submit" action="/php/postComment.php?videoid={{ videoData['id'] }}" method="post">
+            <form class="comment-submit" action="/php/commentPost.php?videoid={{ videoData['id'] }}" method="post">
                 <div class="form-group">
                   <label for="textarea-comment">Comment:</label>
                   <textarea class="form-control" rows="5" id="textarea-comment" name="comment"></textarea>
@@ -109,8 +104,8 @@
                         <p class="comment-text col-11">{{ commentdata.comment }}</p>
                         {% if commentdata.userid==userid %}
                         <div class="col-1">
-                            <form action="/video?id={{ videoData['id'] }}" method="post">
-                                <button type="submit" name="deleteComment" value="{{ commentdata.id }}" class="btn btn-danger">X</button>
+                            <form action="/php/commentDelete.php?videoid={{ videoData['id'] }}" method="post">
+                                <button type="submit" name="commentid" value="{{ commentdata.id }}" class="btn btn-danger">X</button>
                             </form>
                         </div>
                         {% endif %}
