--- a/twig/video.html
+++ b/twig/video.html
@@ -64,7 +64,7 @@
         <div class="col-md-12 ">
             <h2 class="other-title">Description</h2>
 
-            <p>{{ videoData['descr'] }}</p>
+            <p>{{ videoData['description'] }}</p>
         </div>
     </div>
 </div>
