--- a/twig/home.html
+++ b/twig/home.html
@@ -22,12 +22,12 @@
                 </div>
                 <div class="row col-md-6">
                     <div class="col-1">
-                        <form action="/php/wannabe.php" method="post" class="form-group">
+                        <form action="/php/userUpdateType.php" method="post" class="form-group">
                             <button type="submit" name="teacher" value="{{ _user['id'] }}" class="btn btn-success btn-sm">Yai!</button>
                         </form>
                     </div>
                     <div class="col-1">
-                        <form action="/php/wannabe.php" method="post" class="form-group">
+                        <form action="/php/userUpdateType.php" method="post" class="form-group">
                             <button type="submit" name="student" value="{{ _user['id'] }}" class="btn btn-danger btn-sm">Nej!</button>
                         </form>
                     </div>
@@ -35,7 +35,7 @@
                     <div class="col-1"></div>
 
                     <div class="col-2">
-                        <form action="/php/wannabe.php" method="post" class="form-group">
+                        <form action="/php/userUpdateType.php" method="post" class="form-group">
                             <button type="submit" name="admin" value="{{ _user['id'] }}" class="btn btn-warning btn-sm">Admin!</button>
                         </form>
                     </div>
