--- a/twig/login.html
+++ b/twig/login.html
@@ -18,11 +18,13 @@
         <div class="col-md-6 col-sm-12 form-line">
             <form action="/php/userLogin.php" method="post" class="form-signin form-group">
                 <h2 class="form-signin-heading text-white">Sign in</h2>
-
                 <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus="">
-
                 <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
-
+                <div class="checkbox">
+                  <label class="text-white">
+                    <input type="checkbox" name="rememberMe" value="yes"/> Remember me
+                  </label>
+                </div>
                 <button class="btn btn-default bg-transparent btn-block border border-white text-white" type="submit">Sign in</button>
             </form>
         </div>
@@ -49,5 +51,5 @@
 
 {% endblock content %}
 
-{% block nav %} <!-- <nav> disabled --> {% endblock %} 
-{% block footer %} <!-- <footer> disabled --> {% endblock %} 
+{% block nav %} <!-- <nav> disabled --> {% endblock %}
+{% block footer %} <!-- <footer> disabled --> {% endblock %}
