Delete User now works in its full glory

--- a/twig/user.html
+++ b/twig/user.html
@@ -72,13 +72,13 @@
     </div>
 
     <div class="col-md-4">
-        <form action="" method="post">
+        <form action="/php/userDelete.php" method="post">
             <div class="checkbox">
                 <label class="text-dark">
                     <input type="checkbox" name="isTeacher" value="yes" required > I am sure, I want to delete my account.
                 </label>
             </div>
-            <button type="submit" class="btn btn-danger btn-lg btn-block" disabled>DELETE</button>
+            <button type="submit" class="btn btn-danger btn-lg btn-block">DELETE</button>
         </form>
     </div>
 
