--- a/twig/_foot.html
+++ b/twig/_foot.html
@@ -3,6 +3,7 @@
     <!-- Bootstrap JavaScript
         ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="/vendor/twbs/bootstrap/dist/js/bootstrap.js"></script>
 
