small fixes all around, also linkfix in playlist

--- a/twig/playlist.html
+++ b/twig/playlist.html
@@ -27,7 +27,7 @@
         </div>
         <div class="row">
             <div class="col-md-3">
-                <a href="/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+                <a href="/video?id={{ video.id }}"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
             </div>
             <div class="col-md-8" style="word-break: break-all; word-wrap: break-word;">
                 <p>{{ video.description }}</p>
