--- a/twig/video.html
+++ b/twig/video.html
@@ -29,6 +29,7 @@
                         {% for playlist in userPlaylists %}
                             <a class="dropdown-item" href="/php/playlistAdd.php?playlistid={{ playlist['id'] }}&videoid={{ videoData['id'] }}">{{ playlist['title'] }}</a>
                         {% endfor %}
+                            <a class="dropdown-item" href="/php/playlistCreate.php?playlist-title=Title&playlist-description=Description&video-id={{ videoData['id'] }}">Create new playlist</a>
                     </div>
                 </div>
                 <div style="margin-left: 1px;">
