--- a/twig/_nav.html
+++ b/twig/_nav.html
@@ -1,32 +1,41 @@
 <nav class="navbar navbar-inverse navbar-static-top">
-
-    <a class="navbar-brand text-success content-header-logo" href="/">#MeToobe</a>
-
-
-    <form action="/search" method="get" class="mx-2 my-auto d-inline w-50">
-        <div class="input-group">
-            <input type="text" name="query" class="form-control" placeholder="imt2631..">
-            <span class="input-group-btn">
-                <button class="btn btn-outline-success ml-lg-1" type="submit">GO</button>
-            </span>
+    <div class="container-fluid">
+        <div class="col-md-3">
+            <a class="navbar-brand text-success content-header-logo" href="/">#MeToobe</a>
         </div>
-    </form>
 
-    <ul class="nav nav-pills">
-        <li class="nav-item">
-            <a href="/upload"><i class="my-3 fas fa-upload fa-lg" style="color: #28a745;"></i></a>
-        </li>
-        <li class="nav-item">
+        <div class="col-md-6">
+        <form action="/search" method="get" class="">
+            <div class="input-group">
+                <input type="text" name="query" class="form-control" placeholder="imt2631..">
+                <span class="input-group-btn">
+                    <button class="btn btn-outline-success ml-lg-1" type="submit">GO</button>
+                </span>
+            </div>
+        </form>
+        </div>
+        <div class="col-md-3">
+        <ul class="nav nav-pills float-right">
+            <li class="nav-item">
+                <a href="/playlist"><i class="my-1 fas fa-list-ol fa-2x" style="color: #28a745;"></i></a>
+            </li>
+            <li><div style="width: 20px;"></div> </li>
+            <li class="nav-item">
+                <a href="/upload"><i class="my-1 fas fa-upload fa-2x" style="color: #28a745;"></i></a>
+            </li>
+            <li class="nav-item">
 
-            {% if not userid %}
-            <a class="nav-link text-success" href="/login">Login</a>
-            
-            {% else %}            
-            <a class="nav-link text-success" href="/user?id={{ userid }}">{{ user['fullname'] }}</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-success" href="/php/userLogout.php">Logout</a>
-            {% endif %}
-        </li>
-    </ul>
+                {% if not userid %}
+                <a class="nav-link text-success" href="/login">Login</a>
+
+                {% else %}
+                <a class="nav-link text-success" href="/user?id={{ userid }}">{{ user['fullname'] }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-success" href="/php/userLogout.php">Logout</a>
+                {% endif %}
+            </li>
+        </ul>
+        </div>
+    </div>
 </nav>
