--- a/twig/upload.html
+++ b/twig/upload.html
@@ -9,11 +9,22 @@
                 <div class="col-md-4">
                    <label for="fileuploader"><h4 class="other-title">Upload <span class="text-success">Video</span></h4></label>
                     <div class="custom-file" id="fileuploader">
-                        <input type="file" class="custom-file-input" id="customFile" name="fileToUpload" accept="video/mp4,video/webm,video/oog" required>
+                        <input type="file" class="custom-file-input" id="customFile" name="file-video" accept="video/mp4,video/webm,video/oog" required>
                         <label class="custom-file-label" for="customFile">
                             <span class="file-custom" data-content-value="Choose Video..."></span>
                         </label>
                     </div>
+                    <br/>
+
+                   <label for="fileuploader2"><h4 class="other-title">Upload <span class="text-success">Thumbnail</span></h4></label>
+                    <div class="custom-file" id="fileuploader2">
+                        <input type="file" class="custom-file-input" id="customFileThumbnail" name="file-thumbnail" accept="image/*"  required>
+                        <label class="custom-file-label" for="customFileThumbnail">
+                            <span class="file-custom" data-content-value="Choose Thumbnail..."></span>
+                        </label>
+                    </div>
+
+
                 </div>
                 <div class="col-md-8">
                     <label for="videotitle"><h4 class="other-title">Title</h4></label><input class="form-control" type="text" name="videotitle" id="videotitle" required><br>
