--- a/twig/playlist.html
+++ b/twig/playlist.html
@@ -22,7 +22,7 @@
         {% if createMode %}
         <label for="fileuploader"><h4 class="other-title">Upload <span class="text-success">Thumbnail</span></h4></label>
         <div class="custom-file" id="fileuploader">
-            <input type="file" class="custom-file-input" id="customFileThumbnail" name="file-thumbnail" accept="image/*"  required>
+            <input type="file" class="custom-file-input" id="customFileThumbnail" name="file-thumbnail" accept="image/*">
             <label class="custom-file-label" for="customFileThumbnail">
                 <span class="file-custom" data-content-value="Choose Thumbnail..."></span>
             </label>
