--- a/twig/upload.html
+++ b/twig/upload.html
@@ -18,7 +18,7 @@
 
                    <label for="fileuploader2"><h4 class="other-title">Upload <span class="text-success">Thumbnail</span></h4></label>
                     <div class="custom-file" id="fileuploader2">
-                        <input type="file" class="custom-file-input" id="customFileThumbnail" name="file-thumbnail" accept="image/*"  required>
+                        <input type="file" class="custom-file-input" id="customFileThumbnail" name="file-thumbnail" accept="image/*">
                         <label class="custom-file-label" for="customFileThumbnail">
                             <span class="file-custom" data-content-value="Choose Thumbnail..."></span>
                         </label>
