--- a/twig/upload.html
+++ b/twig/upload.html
@@ -9,7 +9,7 @@
                 <div class="col-md-4">
                    <label for="fileuploader"><h4 class="other-title">Upload <span class="text-success">Video</span></h4></label>
                     <div class="custom-file" id="fileuploader">
-                        <input type="file" class="custom-file-input" id="customFile" name="file-video" accept="video/mp4,video/webm,video/oog" required>
+                        <input type="file" class="custom-file-input" id="customFile" name="file-video" accept="video/mp4,video/webm,video/oog">
                         <label class="custom-file-label" for="customFile">
                             <span class="file-custom" data-content-value="Choose Video..."></span>
                         </label>
