--- a/twig/video.html
+++ b/twig/video.html
@@ -11,7 +11,12 @@
 
         <!-- VIDEO CONTAINER -->
         <video width="100%" height="100%" controls>
+            {% if videoData['mime'] %}
             <source src="/uploadedFiles/{{ videoData['userid'] }}/{{ videoData['id'] }}{% if videoData['mime']=='video/mp4' %}.mp4{% elseif videoData['mime']=='video/webm' %}.webm{% elseif videoData['mime']=='video/ogg' %}.ogg{% endif %}" type="{{ videoData['mime'] }}">
+            {% else %} 
+            <source src="thumbnail/default.mp4" type="video/mp4">
+            {% endif %}
+
         </video>
 
         <div class="row col-md-12">
