--- a/twig/search.html
+++ b/twig/search.html
@@ -3,21 +3,67 @@
 {% block content %}
 <div class="container-fluid border-top"><br></div>
 
-<div class="container">
+<div class="container-fluid">
 
     <div class="row">
-        {% if searchResults=='no' %}
-        <div class="col-md-4">
-            <h2 class="other-title">No videos found.</h2>
+
+        <!-- VIDEOS -->
+
+        <div class="col-md-6 border-right">
+            <h2 class="other-title text-success text-center">Videos</h2>
+            {% if videoResults=='no' %}
+            <div class="col-md-12">
+                <h2 class="other-title">No videos found.</h2>
+            </div>
+            {% else %}
+            {% for video in videoResults %}
+            <div class="col-md-12" style="margin-bottom: 20px;">
+                <div class="row">
+                    <div class="col-md-4">
+                        <a href="/video?id={{ video['id'] }}"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="col-md-12 border-bottom">
+                            <h2 class="lead text">{{ video.name }}</h2>
+                        </div>
+                        <div class="col-md-12" style="word-break: break-all; word-wrap: break-word;">
+                            <p>{{ video.description }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+            {% endif %}
         </div>
-        {% else %}
-        {% for video in searchResults %}
-        <div class="col-md-4">
-            <h2 class="lead text-limit">{{ video['name'] }}</h2>
-            <a href="/video?id={{ video['id'] }}"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+
+
+        <!-- PLAYLISTS -->
+        <div class="col-md-6">
+            <h2 class="other-title text-info text-center">Playlists</h2>
+            {% if playlistResults=='no' %}
+            <div class="col-md-12">
+                <h2 class="other-title">No playlists found.</h2>
+            </div>
+            {% else %}
+            {% for playlist in playlistResults %}
+            <div class="col-md-12" style="margin-bottom: 20px;">
+                <div class="row">
+                    <div class="col-md-4">
+                        <a href="/playlist?id={{ playlist['id'] }}"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="col-md-12 border-bottom">
+                            <h2 class="lead text">{{ playlist.title }}</h2>
+                        </div>
+                        <div class="col-md-12" style="word-break: break-all; word-wrap: break-word;">
+                            <p>{{ playlist.description }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+            {% endif %}
         </div>
-        {% endfor %}
-        {% endif %}
     </div>
 </div>
 
